src/frontend/JitteryParser.cpp

// Generated from /Users/thosakwe/Source/CPP/jittery/src/frontend/Jittery.g4 by ANTLR 4.7


#include "JitteryVisitor.h"

#include "JitteryParser.h"


using namespace antlrcpp;
using namespace frontend;
using namespace antlr4;

JitteryParser::JitteryParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

JitteryParser::~JitteryParser() {
  delete _interpreter;
}

std::string JitteryParser::getGrammarFileName() const {
  return "Jittery.g4";
}

const std::vector<std::string>& JitteryParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& JitteryParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- CompilationUnitContext ------------------------------------------------------------------

JitteryParser::CompilationUnitContext::CompilationUnitContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<JitteryParser::TopLevelContext *> JitteryParser::CompilationUnitContext::topLevel() {
  return getRuleContexts<JitteryParser::TopLevelContext>();
}

JitteryParser::TopLevelContext* JitteryParser::CompilationUnitContext::topLevel(size_t i) {
  return getRuleContext<JitteryParser::TopLevelContext>(i);
}


size_t JitteryParser::CompilationUnitContext::getRuleIndex() const {
  return JitteryParser::RuleCompilationUnit;
}

antlrcpp::Any JitteryParser::CompilationUnitContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<JitteryVisitor*>(visitor))
    return parserVisitor->visitCompilationUnit(this);
  else
    return visitor->visitChildren(this);
}

JitteryParser::CompilationUnitContext* JitteryParser::compilationUnit() {
  CompilationUnitContext *_localctx = _tracker.createInstance<CompilationUnitContext>(_ctx, getState());
  enterRule(_localctx, 0, JitteryParser::RuleCompilationUnit);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(15);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << JitteryParser::T__0)
      | (1ULL << JitteryParser::T__6)
      | (1ULL << JitteryParser::T__8)
      | (1ULL << JitteryParser::T__10)
      | (1ULL << JitteryParser::T__11)
      | (1ULL << JitteryParser::T__13)
      | (1ULL << JitteryParser::T__14)
      | (1ULL << JitteryParser::T__15)
      | (1ULL << JitteryParser::T__16)
      | (1ULL << JitteryParser::T__17)
      | (1ULL << JitteryParser::FLOAT)
      | (1ULL << JitteryParser::INT)
      | (1ULL << JitteryParser::STRING)
      | (1ULL << JitteryParser::ID))) != 0)) {
      setState(12);
      topLevel();
      setState(17);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TopLevelContext ------------------------------------------------------------------

JitteryParser::TopLevelContext::TopLevelContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

JitteryParser::FnDeclContext* JitteryParser::TopLevelContext::fnDecl() {
  return getRuleContext<JitteryParser::FnDeclContext>(0);
}

JitteryParser::StmtContext* JitteryParser::TopLevelContext::stmt() {
  return getRuleContext<JitteryParser::StmtContext>(0);
}


size_t JitteryParser::TopLevelContext::getRuleIndex() const {
  return JitteryParser::RuleTopLevel;
}

antlrcpp::Any JitteryParser::TopLevelContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<JitteryVisitor*>(visitor))
    return parserVisitor->visitTopLevel(this);
  else
    return visitor->visitChildren(this);
}

JitteryParser::TopLevelContext* JitteryParser::topLevel() {
  TopLevelContext *_localctx = _tracker.createInstance<TopLevelContext>(_ctx, getState());
  enterRule(_localctx, 2, JitteryParser::RuleTopLevel);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(20);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case JitteryParser::T__0: {
        enterOuterAlt(_localctx, 1);
        setState(18);
        fnDecl();
        break;
      }

      case JitteryParser::T__6:
      case JitteryParser::T__8:
      case JitteryParser::T__10:
      case JitteryParser::T__11:
      case JitteryParser::T__13:
      case JitteryParser::T__14:
      case JitteryParser::T__15:
      case JitteryParser::T__16:
      case JitteryParser::T__17:
      case JitteryParser::FLOAT:
      case JitteryParser::INT:
      case JitteryParser::STRING:
      case JitteryParser::ID: {
        enterOuterAlt(_localctx, 2);
        setState(19);
        stmt();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FnDeclContext ------------------------------------------------------------------

JitteryParser::FnDeclContext::FnDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> JitteryParser::FnDeclContext::ID() {
  return getTokens(JitteryParser::ID);
}

tree::TerminalNode* JitteryParser::FnDeclContext::ID(size_t i) {
  return getToken(JitteryParser::ID, i);
}

std::vector<JitteryParser::StmtContext *> JitteryParser::FnDeclContext::stmt() {
  return getRuleContexts<JitteryParser::StmtContext>();
}

JitteryParser::StmtContext* JitteryParser::FnDeclContext::stmt(size_t i) {
  return getRuleContext<JitteryParser::StmtContext>(i);
}


size_t JitteryParser::FnDeclContext::getRuleIndex() const {
  return JitteryParser::RuleFnDecl;
}

antlrcpp::Any JitteryParser::FnDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<JitteryVisitor*>(visitor))
    return parserVisitor->visitFnDecl(this);
  else
    return visitor->visitChildren(this);
}

JitteryParser::FnDeclContext* JitteryParser::fnDecl() {
  FnDeclContext *_localctx = _tracker.createInstance<FnDeclContext>(_ctx, getState());
  enterRule(_localctx, 4, JitteryParser::RuleFnDecl);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(22);
    match(JitteryParser::T__0);
    setState(23);
    dynamic_cast<FnDeclContext *>(_localctx)->name = match(JitteryParser::ID);
    setState(24);
    match(JitteryParser::T__1);
    setState(33);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == JitteryParser::ID) {
      setState(29);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx);
      while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
        if (alt == 1) {
          setState(25);
          dynamic_cast<FnDeclContext *>(_localctx)->idToken = match(JitteryParser::ID);
          dynamic_cast<FnDeclContext *>(_localctx)->params.push_back(dynamic_cast<FnDeclContext *>(_localctx)->idToken);
          setState(26);
          match(JitteryParser::T__2); 
        }
        setState(31);
        _errHandler->sync(this);
        alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx);
      }
      setState(32);
      dynamic_cast<FnDeclContext *>(_localctx)->idToken = match(JitteryParser::ID);
      dynamic_cast<FnDeclContext *>(_localctx)->params.push_back(dynamic_cast<FnDeclContext *>(_localctx)->idToken);
    }
    setState(35);
    match(JitteryParser::T__3);
    setState(36);
    match(JitteryParser::T__4);
    setState(40);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << JitteryParser::T__6)
      | (1ULL << JitteryParser::T__8)
      | (1ULL << JitteryParser::T__10)
      | (1ULL << JitteryParser::T__11)
      | (1ULL << JitteryParser::T__13)
      | (1ULL << JitteryParser::T__14)
      | (1ULL << JitteryParser::T__15)
      | (1ULL << JitteryParser::T__16)
      | (1ULL << JitteryParser::T__17)
      | (1ULL << JitteryParser::FLOAT)
      | (1ULL << JitteryParser::INT)
      | (1ULL << JitteryParser::STRING)
      | (1ULL << JitteryParser::ID))) != 0)) {
      setState(37);
      stmt();
      setState(42);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(43);
    match(JitteryParser::T__5);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StmtContext ------------------------------------------------------------------

JitteryParser::StmtContext::StmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t JitteryParser::StmtContext::getRuleIndex() const {
  return JitteryParser::RuleStmt;
}

void JitteryParser::StmtContext::copyFrom(StmtContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- IfStmtContext ------------------------------------------------------------------

JitteryParser::ExprContext* JitteryParser::IfStmtContext::expr() {
  return getRuleContext<JitteryParser::ExprContext>(0);
}

std::vector<JitteryParser::ElseIfContext *> JitteryParser::IfStmtContext::elseIf() {
  return getRuleContexts<JitteryParser::ElseIfContext>();
}

JitteryParser::ElseIfContext* JitteryParser::IfStmtContext::elseIf(size_t i) {
  return getRuleContext<JitteryParser::ElseIfContext>(i);
}

std::vector<JitteryParser::StmtContext *> JitteryParser::IfStmtContext::stmt() {
  return getRuleContexts<JitteryParser::StmtContext>();
}

JitteryParser::StmtContext* JitteryParser::IfStmtContext::stmt(size_t i) {
  return getRuleContext<JitteryParser::StmtContext>(i);
}

JitteryParser::IfStmtContext::IfStmtContext(StmtContext *ctx) { copyFrom(ctx); }

antlrcpp::Any JitteryParser::IfStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<JitteryVisitor*>(visitor))
    return parserVisitor->visitIfStmt(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ExprStmtContext ------------------------------------------------------------------

JitteryParser::ExprContext* JitteryParser::ExprStmtContext::expr() {
  return getRuleContext<JitteryParser::ExprContext>(0);
}

JitteryParser::ExprStmtContext::ExprStmtContext(StmtContext *ctx) { copyFrom(ctx); }

antlrcpp::Any JitteryParser::ExprStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<JitteryVisitor*>(visitor))
    return parserVisitor->visitExprStmt(this);
  else
    return visitor->visitChildren(this);
}
//----------------- WhileStmtContext ------------------------------------------------------------------

JitteryParser::ExprContext* JitteryParser::WhileStmtContext::expr() {
  return getRuleContext<JitteryParser::ExprContext>(0);
}

std::vector<JitteryParser::StmtContext *> JitteryParser::WhileStmtContext::stmt() {
  return getRuleContexts<JitteryParser::StmtContext>();
}

JitteryParser::StmtContext* JitteryParser::WhileStmtContext::stmt(size_t i) {
  return getRuleContext<JitteryParser::StmtContext>(i);
}

JitteryParser::WhileStmtContext::WhileStmtContext(StmtContext *ctx) { copyFrom(ctx); }

antlrcpp::Any JitteryParser::WhileStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<JitteryVisitor*>(visitor))
    return parserVisitor->visitWhileStmt(this);
  else
    return visitor->visitChildren(this);
}
//----------------- VarDeclStmtContext ------------------------------------------------------------------

tree::TerminalNode* JitteryParser::VarDeclStmtContext::ID() {
  return getToken(JitteryParser::ID, 0);
}

JitteryParser::ExprContext* JitteryParser::VarDeclStmtContext::expr() {
  return getRuleContext<JitteryParser::ExprContext>(0);
}

JitteryParser::VarDeclStmtContext::VarDeclStmtContext(StmtContext *ctx) { copyFrom(ctx); }

antlrcpp::Any JitteryParser::VarDeclStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<JitteryVisitor*>(visitor))
    return parserVisitor->visitVarDeclStmt(this);
  else
    return visitor->visitChildren(this);
}
//----------------- IdAssnStmtContext ------------------------------------------------------------------

tree::TerminalNode* JitteryParser::IdAssnStmtContext::ID() {
  return getToken(JitteryParser::ID, 0);
}

JitteryParser::ExprContext* JitteryParser::IdAssnStmtContext::expr() {
  return getRuleContext<JitteryParser::ExprContext>(0);
}

JitteryParser::IdAssnStmtContext::IdAssnStmtContext(StmtContext *ctx) { copyFrom(ctx); }

antlrcpp::Any JitteryParser::IdAssnStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<JitteryVisitor*>(visitor))
    return parserVisitor->visitIdAssnStmt(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ForStmtContext ------------------------------------------------------------------

JitteryParser::ExprContext* JitteryParser::ForStmtContext::expr() {
  return getRuleContext<JitteryParser::ExprContext>(0);
}

std::vector<tree::TerminalNode *> JitteryParser::ForStmtContext::ID() {
  return getTokens(JitteryParser::ID);
}

tree::TerminalNode* JitteryParser::ForStmtContext::ID(size_t i) {
  return getToken(JitteryParser::ID, i);
}

std::vector<JitteryParser::StmtContext *> JitteryParser::ForStmtContext::stmt() {
  return getRuleContexts<JitteryParser::StmtContext>();
}

JitteryParser::StmtContext* JitteryParser::ForStmtContext::stmt(size_t i) {
  return getRuleContext<JitteryParser::StmtContext>(i);
}

JitteryParser::ForStmtContext::ForStmtContext(StmtContext *ctx) { copyFrom(ctx); }

antlrcpp::Any JitteryParser::ForStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<JitteryVisitor*>(visitor))
    return parserVisitor->visitForStmt(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ThrowStmtContext ------------------------------------------------------------------

JitteryParser::ExprContext* JitteryParser::ThrowStmtContext::expr() {
  return getRuleContext<JitteryParser::ExprContext>(0);
}

JitteryParser::ThrowStmtContext::ThrowStmtContext(StmtContext *ctx) { copyFrom(ctx); }

antlrcpp::Any JitteryParser::ThrowStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<JitteryVisitor*>(visitor))
    return parserVisitor->visitThrowStmt(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ReturnStmtContext ------------------------------------------------------------------

JitteryParser::ExprContext* JitteryParser::ReturnStmtContext::expr() {
  return getRuleContext<JitteryParser::ExprContext>(0);
}

JitteryParser::ReturnStmtContext::ReturnStmtContext(StmtContext *ctx) { copyFrom(ctx); }

antlrcpp::Any JitteryParser::ReturnStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<JitteryVisitor*>(visitor))
    return parserVisitor->visitReturnStmt(this);
  else
    return visitor->visitChildren(this);
}
JitteryParser::StmtContext* JitteryParser::stmt() {
  StmtContext *_localctx = _tracker.createInstance<StmtContext>(_ctx, getState());
  enterRule(_localctx, 6, JitteryParser::RuleStmt);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    setState(112);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 12, _ctx)) {
    case 1: {
      _localctx = dynamic_cast<StmtContext *>(_tracker.createInstance<JitteryParser::VarDeclStmtContext>(_localctx));
      enterOuterAlt(_localctx, 1);
      setState(45);
      match(JitteryParser::T__6);
      setState(46);
      match(JitteryParser::ID);
      setState(47);
      match(JitteryParser::T__7);
      setState(48);
      expr(0);
      break;
    }

    case 2: {
      _localctx = dynamic_cast<StmtContext *>(_tracker.createInstance<JitteryParser::IfStmtContext>(_localctx));
      enterOuterAlt(_localctx, 2);
      setState(49);
      match(JitteryParser::T__8);
      setState(50);
      dynamic_cast<IfStmtContext *>(_localctx)->condition = expr(0);
      setState(51);
      match(JitteryParser::T__4);
      setState(55);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while ((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & ((1ULL << JitteryParser::T__6)
        | (1ULL << JitteryParser::T__8)
        | (1ULL << JitteryParser::T__10)
        | (1ULL << JitteryParser::T__11)
        | (1ULL << JitteryParser::T__13)
        | (1ULL << JitteryParser::T__14)
        | (1ULL << JitteryParser::T__15)
        | (1ULL << JitteryParser::T__16)
        | (1ULL << JitteryParser::T__17)
        | (1ULL << JitteryParser::FLOAT)
        | (1ULL << JitteryParser::INT)
        | (1ULL << JitteryParser::STRING)
        | (1ULL << JitteryParser::ID))) != 0)) {
        setState(52);
        dynamic_cast<IfStmtContext *>(_localctx)->ifPredicate = stmt();
        setState(57);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(63);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx);
      while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
        if (alt == 1) {
          setState(58);
          match(JitteryParser::T__9);
          setState(59);
          match(JitteryParser::T__8);
          setState(60);
          elseIf(); 
        }
        setState(65);
        _errHandler->sync(this);
        alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx);
      }
      setState(73);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == JitteryParser::T__9) {
        setState(66);
        match(JitteryParser::T__9);
        setState(70);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while ((((_la & ~ 0x3fULL) == 0) &&
          ((1ULL << _la) & ((1ULL << JitteryParser::T__6)
          | (1ULL << JitteryParser::T__8)
          | (1ULL << JitteryParser::T__10)
          | (1ULL << JitteryParser::T__11)
          | (1ULL << JitteryParser::T__13)
          | (1ULL << JitteryParser::T__14)
          | (1ULL << JitteryParser::T__15)
          | (1ULL << JitteryParser::T__16)
          | (1ULL << JitteryParser::T__17)
          | (1ULL << JitteryParser::FLOAT)
          | (1ULL << JitteryParser::INT)
          | (1ULL << JitteryParser::STRING)
          | (1ULL << JitteryParser::ID))) != 0)) {
          setState(67);
          dynamic_cast<IfStmtContext *>(_localctx)->elsePredicate = stmt();
          setState(72);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
      }
      setState(75);
      match(JitteryParser::T__5);
      break;
    }

    case 3: {
      _localctx = dynamic_cast<StmtContext *>(_tracker.createInstance<JitteryParser::WhileStmtContext>(_localctx));
      enterOuterAlt(_localctx, 3);
      setState(77);
      match(JitteryParser::T__10);
      setState(78);
      dynamic_cast<WhileStmtContext *>(_localctx)->condition = expr(0);
      setState(82);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while ((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & ((1ULL << JitteryParser::T__6)
        | (1ULL << JitteryParser::T__8)
        | (1ULL << JitteryParser::T__10)
        | (1ULL << JitteryParser::T__11)
        | (1ULL << JitteryParser::T__13)
        | (1ULL << JitteryParser::T__14)
        | (1ULL << JitteryParser::T__15)
        | (1ULL << JitteryParser::T__16)
        | (1ULL << JitteryParser::T__17)
        | (1ULL << JitteryParser::FLOAT)
        | (1ULL << JitteryParser::INT)
        | (1ULL << JitteryParser::STRING)
        | (1ULL << JitteryParser::ID))) != 0)) {
        setState(79);
        stmt();
        setState(84);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(85);
      match(JitteryParser::T__5);
      break;
    }

    case 4: {
      _localctx = dynamic_cast<StmtContext *>(_tracker.createInstance<JitteryParser::ForStmtContext>(_localctx));
      enterOuterAlt(_localctx, 4);
      setState(87);
      match(JitteryParser::T__11);
      setState(88);
      dynamic_cast<ForStmtContext *>(_localctx)->itemName = match(JitteryParser::ID);
      setState(91);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == JitteryParser::T__2) {
        setState(89);
        match(JitteryParser::T__2);
        setState(90);
        dynamic_cast<ForStmtContext *>(_localctx)->indexName = match(JitteryParser::ID);
      }
      setState(93);
      match(JitteryParser::T__12);
      setState(94);
      expr(0);
      setState(95);
      match(JitteryParser::T__4);
      setState(99);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while ((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & ((1ULL << JitteryParser::T__6)
        | (1ULL << JitteryParser::T__8)
        | (1ULL << JitteryParser::T__10)
        | (1ULL << JitteryParser::T__11)
        | (1ULL << JitteryParser::T__13)
        | (1ULL << JitteryParser::T__14)
        | (1ULL << JitteryParser::T__15)
        | (1ULL << JitteryParser::T__16)
        | (1ULL << JitteryParser::T__17)
        | (1ULL << JitteryParser::FLOAT)
        | (1ULL << JitteryParser::INT)
        | (1ULL << JitteryParser::STRING)
        | (1ULL << JitteryParser::ID))) != 0)) {
        setState(96);
        stmt();
        setState(101);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(102);
      match(JitteryParser::T__5);
      break;
    }

    case 5: {
      _localctx = dynamic_cast<StmtContext *>(_tracker.createInstance<JitteryParser::ThrowStmtContext>(_localctx));
      enterOuterAlt(_localctx, 5);
      setState(104);
      match(JitteryParser::T__13);
      setState(105);
      expr(0);
      break;
    }

    case 6: {
      _localctx = dynamic_cast<StmtContext *>(_tracker.createInstance<JitteryParser::ReturnStmtContext>(_localctx));
      enterOuterAlt(_localctx, 6);
      setState(106);
      match(JitteryParser::T__14);
      setState(107);
      expr(0);
      break;
    }

    case 7: {
      _localctx = dynamic_cast<StmtContext *>(_tracker.createInstance<JitteryParser::IdAssnStmtContext>(_localctx));
      enterOuterAlt(_localctx, 7);
      setState(108);
      match(JitteryParser::ID);
      setState(109);
      match(JitteryParser::T__7);
      setState(110);
      expr(0);
      break;
    }

    case 8: {
      _localctx = dynamic_cast<StmtContext *>(_tracker.createInstance<JitteryParser::ExprStmtContext>(_localctx));
      enterOuterAlt(_localctx, 8);
      setState(111);
      expr(0);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ElseIfContext ------------------------------------------------------------------

JitteryParser::ElseIfContext::ElseIfContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

JitteryParser::ExprContext* JitteryParser::ElseIfContext::expr() {
  return getRuleContext<JitteryParser::ExprContext>(0);
}

std::vector<JitteryParser::StmtContext *> JitteryParser::ElseIfContext::stmt() {
  return getRuleContexts<JitteryParser::StmtContext>();
}

JitteryParser::StmtContext* JitteryParser::ElseIfContext::stmt(size_t i) {
  return getRuleContext<JitteryParser::StmtContext>(i);
}


size_t JitteryParser::ElseIfContext::getRuleIndex() const {
  return JitteryParser::RuleElseIf;
}

antlrcpp::Any JitteryParser::ElseIfContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<JitteryVisitor*>(visitor))
    return parserVisitor->visitElseIf(this);
  else
    return visitor->visitChildren(this);
}

JitteryParser::ElseIfContext* JitteryParser::elseIf() {
  ElseIfContext *_localctx = _tracker.createInstance<ElseIfContext>(_ctx, getState());
  enterRule(_localctx, 8, JitteryParser::RuleElseIf);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(114);
    dynamic_cast<ElseIfContext *>(_localctx)->condition = expr(0);
    setState(115);
    match(JitteryParser::T__4);
    setState(119);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << JitteryParser::T__6)
      | (1ULL << JitteryParser::T__8)
      | (1ULL << JitteryParser::T__10)
      | (1ULL << JitteryParser::T__11)
      | (1ULL << JitteryParser::T__13)
      | (1ULL << JitteryParser::T__14)
      | (1ULL << JitteryParser::T__15)
      | (1ULL << JitteryParser::T__16)
      | (1ULL << JitteryParser::T__17)
      | (1ULL << JitteryParser::FLOAT)
      | (1ULL << JitteryParser::INT)
      | (1ULL << JitteryParser::STRING)
      | (1ULL << JitteryParser::ID))) != 0)) {
      setState(116);
      dynamic_cast<ElseIfContext *>(_localctx)->predicate = stmt();
      setState(121);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExprContext ------------------------------------------------------------------

JitteryParser::ExprContext::ExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t JitteryParser::ExprContext::getRuleIndex() const {
  return JitteryParser::RuleExpr;
}

void JitteryParser::ExprContext::copyFrom(ExprContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- StringExprContext ------------------------------------------------------------------

tree::TerminalNode* JitteryParser::StringExprContext::STRING() {
  return getToken(JitteryParser::STRING, 0);
}

JitteryParser::StringExprContext::StringExprContext(ExprContext *ctx) { copyFrom(ctx); }

antlrcpp::Any JitteryParser::StringExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<JitteryVisitor*>(visitor))
    return parserVisitor->visitStringExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- TrueExprContext ------------------------------------------------------------------

JitteryParser::TrueExprContext::TrueExprContext(ExprContext *ctx) { copyFrom(ctx); }

antlrcpp::Any JitteryParser::TrueExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<JitteryVisitor*>(visitor))
    return parserVisitor->visitTrueExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- FloatExprContext ------------------------------------------------------------------

tree::TerminalNode* JitteryParser::FloatExprContext::FLOAT() {
  return getToken(JitteryParser::FLOAT, 0);
}

JitteryParser::FloatExprContext::FloatExprContext(ExprContext *ctx) { copyFrom(ctx); }

antlrcpp::Any JitteryParser::FloatExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<JitteryVisitor*>(visitor))
    return parserVisitor->visitFloatExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- IdExprContext ------------------------------------------------------------------

tree::TerminalNode* JitteryParser::IdExprContext::ID() {
  return getToken(JitteryParser::ID, 0);
}

JitteryParser::IdExprContext::IdExprContext(ExprContext *ctx) { copyFrom(ctx); }

antlrcpp::Any JitteryParser::IdExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<JitteryVisitor*>(visitor))
    return parserVisitor->visitIdExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- MulDivModExprContext ------------------------------------------------------------------

std::vector<JitteryParser::ExprContext *> JitteryParser::MulDivModExprContext::expr() {
  return getRuleContexts<JitteryParser::ExprContext>();
}

JitteryParser::ExprContext* JitteryParser::MulDivModExprContext::expr(size_t i) {
  return getRuleContext<JitteryParser::ExprContext>(i);
}

JitteryParser::MulDivModExprContext::MulDivModExprContext(ExprContext *ctx) { copyFrom(ctx); }

antlrcpp::Any JitteryParser::MulDivModExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<JitteryVisitor*>(visitor))
    return parserVisitor->visitMulDivModExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- CallExprContext ------------------------------------------------------------------

std::vector<JitteryParser::ExprContext *> JitteryParser::CallExprContext::expr() {
  return getRuleContexts<JitteryParser::ExprContext>();
}

JitteryParser::ExprContext* JitteryParser::CallExprContext::expr(size_t i) {
  return getRuleContext<JitteryParser::ExprContext>(i);
}

JitteryParser::CallExprContext::CallExprContext(ExprContext *ctx) { copyFrom(ctx); }

antlrcpp::Any JitteryParser::CallExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<JitteryVisitor*>(visitor))
    return parserVisitor->visitCallExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- IntExprContext ------------------------------------------------------------------

tree::TerminalNode* JitteryParser::IntExprContext::INT() {
  return getToken(JitteryParser::INT, 0);
}

JitteryParser::IntExprContext::IntExprContext(ExprContext *ctx) { copyFrom(ctx); }

antlrcpp::Any JitteryParser::IntExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<JitteryVisitor*>(visitor))
    return parserVisitor->visitIntExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- RangeExprContext ------------------------------------------------------------------

std::vector<JitteryParser::ExprContext *> JitteryParser::RangeExprContext::expr() {
  return getRuleContexts<JitteryParser::ExprContext>();
}
